# proof-of-work-blockchain-cpp

./: CMakeLists.txt  README.md
include/: sha256.h
src/: block.cpp  block.h  blockchain.cpp  blockchain.h  main.cpp
